<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.letsbyjames.letstravel.MainActivity"
    >

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:scrollbars="none"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/LL">


            <RelativeLayout
                android:id="@+id/placesLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/earth_02"
                    tools:ignore="ContentDescription"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/places1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="141dp"
                    android:text="@string/places"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/places"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="140dp"
                    android:text="@string/places"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activitiesLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:paddingTop="15dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/activites_02"
                    tools:ignore="ContentDescription"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/activities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="141dp"
                    android:text="@string/activities"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/activities1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="140dp"
                    android:text="@string/activities"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stadiumsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:paddingTop="15dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/stadiums_02"
                    tools:ignore="ContentDescription"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/stadiums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="141dp"
                    android:text="@string/stadiums"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/stadiums1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="140dp"
                    android:text="@string/stadiums"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nParksLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:paddingTop="15dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/mountains_02"
                    tools:ignore="ContentDescription"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/nParks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="141dp"
                    android:text="@string/nParks"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/nParks1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="140dp"
                    android:text="@string/nParks"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/miscLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:paddingTop="15dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/misc_02"
                    tools:ignore="ContentDescription"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/misc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="141dp"
                    android:text="@string/misc"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/misc1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="140dp"
                    android:text="@string/misc"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
